--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Pav<span>an</span></a>
+        <a href="#" class="logo">Pavan<span>Kalyan</span></a>
         <nav class="navbar">
             <a href="index2.html" class="active">Portfolio </a>
             <a href="pavan_Education.html">Education</a>
