--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <a href="index2.html" class="active">Portfolio </a>
             <a href="pavan_Education.html">Education</a>
-            <a href="#">Experiance</a>
+<!--             <a href="#">Experiance</a> -->
             <a href="Pavan kondaveeti.pdf">Resume</a>
             <!-- <a href="Internship.html">Internship</a> -->
         </nav>
