--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <a href="#" class="logo">Pavan<span>Kumar</span></a>
         <nav class="navbar">
-            <a href="index2.html" class="active">Portfolio </a>
+            <a href="index.html" class="active">Portfolio </a>
             <a href="pavan_Education.html">Education</a>
             <a href="#">Experiance</a>
             <a href="Pavan kondaveeti.pdf">Resume</a>
