--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend <span>Developer</span></h3>
+            <h3>Interior  <span>Designerr</span></h3>
             <p> Experienced Interior Designer with a proven track record of delivering successful projects on time and on budget. Skilled in space planning, color coordination, and furniture selection to create stylish and functional interiors </p>
                   <a href="#" class="btn-2">Experiance</a>
           </div>
