--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="Pavan kondaveeti.pdf">Resume</a>
             <!-- <a href="Internship.html">Internship</a> -->
         </nav>
-        <a href="contact_me.html" class="contact">Contact Me</a>
+        <a href="contactMe.html" class="contact">Contact Me</a>
     </header>
     <section class="home">
         <div class="home-content">
