--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <h1>I'm<span>Pavan Kumar <br></span>a Interior Designer</h1>
            <p> Experienced Interior Designer with a proven track record of delivering successful projects on time and on budget. Skilled in space planning, color coordination, and furniture selection to create stylish and functional interiors  </p>
             <div class="btn-box">
-                <a href="contact_me.html"><button class="btn-1"  >Hire Me</button></a>
+                <a href="contactMe.html"><button class="btn-1"  >Hire Me</button></a>
                 <a href="Pavan kondaveeti.pdf"><button class="btn-2">My Resume</button></a>
             </div>
         </div>
